# worldweaver

./: .gitignore  NOTES.md  PLAN.md  README.md  dump_project.sh  pyproject.toml  pytest.ini  setup_repo.sh
app/: main.py
app/api/routes/: images.py  music.py
app/models/: music.py
app/services/: ai.py  image.py  music.py
tests/: conftest.py  test_image_generation.py  test_music_generation.py
worldweaver/: main.py
worldweaver/api/routes/: images.py  music.py
worldweaver/core/: config.py
worldweaver/models/: image.py
worldweaver/services/: ai.py  image.py  music.py
